Improved docs and added analytics project
- Analytics rails project is a dashboard with some insights about the transactions
- added `ws_consumer2.rb` script that POST transactions to rails endpoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,12 @@ services:
     image: "redis:alpine"
     ports:
     - 6379:6379
+
+  db:
+    image: postgres:15
+    restart: always
+    environment:
+      POSTGRES_USER: analytics
+      POSTGRES_PASSWORD: analytics
+    ports:
+    - 5433:5432
